# dagger

./: .gitignore  Cargo.toml  README.md  build_doc.sh  expand.rs  miri.sh  miri_crox.sh
dagger-lib/: Cargo.toml
dagger-lib/src/: data.rs  lib.rs  prelude.rs  process_data.rs  result.rs  visualization.rs
dagger-macros/: Cargo.toml
dagger-macros/src/: macros.rs
dagger-test/: Cargo.toml
dagger-test/src/: expand.rs  main.rs  main_arc.rs
lib/: Cargo.toml
lib/examples/: demo.rs  expand.rs  integration.rs  manual.rs  parallelize.rs  playground.rs  safe_baseline.rs  schedule.rs  simple.rs  thread_baseline.rs
lib/src/: __private.rs  lib.rs  parallelize.rs  prelude.rs  process_data.rs  result.rs  scheduler.rs  visualization.rs
proc/: Cargo.toml
proc/src/: macros.rs
