[package]
name = "dagger"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
dagger-macros = { path = "../dagger-macros" }

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd"))'.dependencies]
libc = "0.2.174"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_System_Threading"] }

[features]
visualize = ["dagger-macros/visualize"]
