[package]
name = "dagger"
version = "0.1.7"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
dagger-macros = { path = "../proc" }
layout-rs = { version = "0.1.3", optional = true }

[features]
default = ["visualize"]
visualize = ["dep:layout-rs", "dagger-macros/visualize"]
debuginfo = []
