[package]
name = "dagger_lib"
version = "0.1.11"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
dagger-macros = { path = "../proc" }
layout-rs = { version = "0.1.3", optional = true }
measureme = { version = "12.0.3", optional = true }

[features]
default = ["visualize"]
visualize = ["dep:layout-rs", "dagger-macros/visualize"]
